--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,10 @@ input, img {
     padding: 10px;
 }
 
+input:hover {
+    transform: scale(1.05);
+}
+
 input:focus {
     transform: scale(1.1);
     border: 5px solid blue;
@@ -105,10 +109,32 @@ input:active {
     box-shadow: 0 0 5px black;
 }
 
+.resultWin {
+    color:blue;
+    font-size: 70px;
+    font-weight: 700;
+}
 
+.resultLose {
+    color:red;
+    font-size: 70px;
+    font-weight: 700;
+}
 
+.playAgainInvisible {
+    opacity: 0;
+}
 
+.playAgainStyle {
+    font-family: JoyLineNotes, sans-serif;
+    font-size: 60px;
+    font-weight: 700;
+    background: none;
+    border:none;
+    padding-top: 20px;
+    cursor: pointer;
+}
 
-
-
-
+.playAgainStyle:hover {
+    transform: scale(1.3);
+}
