--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 
 body {
     font-family: JoyLineNotes, sans-serif;
-    background-color:bisque;
+    background-color:white;
     background-image: url(images/background.jpg);
     background-size: cover;
     padding-top: 30px;
